// Main Class - Entry point aplikasi
public class Main {
    public static void main(String[] args) {
        // Membuat instance TransportationManager untuk menjalankan sistem
        TransportationManager manager = new TransportationManager();
        
        // Menjalankan menu utama sstem
        manager.showMainMenu();
    }
}
